--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 env:
   global:
-    - BUILD_PKGS="TARGET_PKGS"
+    - BUILD_PKGS="jsk_apc"
     - CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport"
     - NOT_TEST_INSTALL=true
     - ROS_PARALLEL_JOBS="-j2"
@@ -23,7 +23,8 @@ env:
     - ROS_DISTRO=indigo
 
 install:
-  - git clone --branch set_target_pkgs_to_build_pkgs https://github.com/wkentaro/jsk_travis.git .travis
+  - git clone https://github.com/jsk-ros-pkg/jsk_travis.git .travis
+  - (cd .travis && git checkout 40640d45c709bdc7d74a1f8983d51d5df553dbc1)
 
 script:
   # build & test ROS packages
