Publish scenes and view frame of DatasetV3 in ROS

--- a/jsk_arc2017_common/CMakeLists.txt
+++ b/jsk_arc2017_common/CMakeLists.txt
@@ -29,6 +29,7 @@ add_service_files(
 
 generate_dynamic_reconfigure_options(
     cfg/CandidatesPublisher.cfg
+    cfg/PublishDatasetV3.cfg
 )
 
 generate_messages(
