--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 
 dist: trusty
 
-language: generic
+language: c++ # to avoid using /opt/python from travis
 
 cache:
   directories:
