add max_acceleration for right_s0 in joint_limits

--- a/jsk_arc2017_baxter/robots/moveit_config/joint_limits.yaml
+++ b/jsk_arc2017_baxter/robots/moveit_config/joint_limits.yaml
@@ -61,6 +61,7 @@ joint_limits:
     has_velocity_limits: true
     max_velocity: 1.5
     has_acceleration_limits: true
+    max_acceleration: 2.0
   right_s1:
     has_velocity_limits: true
     max_velocity: 1.5
