Build image on Jenkins

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM osrf/ros:indigo-desktop-full
 
+RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list
+
 RUN apt-get update && apt-get install -y \
     wget \
     git \
@@ -26,8 +28,4 @@ RUN rosdep install --from-path ~/src/jsk-ros-pkg/jsk_robot/jsk_baxter_robot -r -
 RUN rosdep install --from-path ~/src/FA-I-sensor/force_proximity_ros -r -y -i
 RUN rosdep install --from-path ~/src/start-jsk/jsk_apc -r -y -i
 
-RUN cd ~ && \
-    rm -rf src/start-jsk/jsk_apc && \
-    . /opt/ros/indigo/setup.sh && \
-    catkin config --blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop && \
-    catkin build
+RUN rm -rf ~/src
