--- a/jsk_arc2017_baxter/CMakeLists.txt
+++ b/jsk_arc2017_baxter/CMakeLists.txt
@@ -120,6 +120,7 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(test/test_stow_state_server.test)
   add_rostest(test/test_pick_main.test)
   add_rostest(test/test_stow_main.test)
+  add_rostest(test/test_arc_interface.test)
   add_rostest(test/test_pick_arc_interface.test)
   add_rostest(test/test_stow_arc_interface.test)
   find_package(jsk_tools REQUIRED)
