--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -14,6 +14,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>baxter_core_msgs</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>dynamixel_msgs</build_depend>
@@ -25,6 +26,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>transmission_interface</build_depend>
 
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>baxter_core_msgs</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>dynamixel_msgs</run_depend>
