--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
     - ROS_PARALLEL_JOBS="-j4"
     - ROSDEP_ADDITIONAL_OPTIONS="-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base"
     - USE_DEB=false
+    - NUMBER_OF_LOGS_TO_KEEP=10 # default is 3
     # - USE_TRAVIS=true
     - DOCKER_IMAGE_JENKINS="jsk-apc-indigo"  # built on Jenkins
   matrix:
