fix test to pass test

--- a/jsk_arc2017_baxter/CMakeLists.txt
+++ b/jsk_arc2017_baxter/CMakeLists.txt
@@ -131,7 +131,6 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(test/test_pick_main.test)
   add_rostest(test/test_stow_main.test)
   add_rostest(test/test_arc_interface.test)
-  add_rostest(test/test_pick_arc_interface.test)
   add_rostest(test/test_stow_arc_interface.test)
   find_package(jsk_tools REQUIRED)
   find_package(jsk_apc2016_common REQUIRED)
@@ -139,4 +138,6 @@ if(CATKIN_ENABLE_TESTING)
     jsk_tools_add_shell_test(COMMAND "rosrun jsk_apc2016_common euslint ${PROJECT_SOURCE_DIR}/euslisp")
     jsk_tools_add_shell_test(COMMAND "rosrun jsk_apc2016_common euslint ${PROJECT_SOURCE_DIR}/test")
   endif()
+  find_package(jsk_arc2017_common REQUIRED)
+  add_rostest(test/test_pick_arc_interface.test)
 endif()
