Data for practicing using APC2015 objects

--- a/jsk_arc2017_common/config/label_names.yaml
+++ b/jsk_arc2017_common/config/label_names.yaml
@@ -1,42 +1,33 @@
 - __background__
 - avery_binder
-- balloons
-- band_aid_tape
+- bath_duck
 - bath_sponge
 - black_fashion_gloves
-- burts_bees_baby_wipes
-- colgate_toothbrush_4pk
+- cheezits
 - composition_book
 - crayons
+- crayons_big
+- dental_treats
+- duck_toy
 - duct_tape
-- epsom_salts
 - expo_eraser
 - fiskars_scissors
-- flashlight
-- glue_sticks
+- glue
 - hand_weight
 - hanes_socks
-- hinged_ruled_index_cards
-- ice_cube_tray
+- highlighters
+- index_cards
 - irish_spring_soap
-- laugh_out_loud_jokes
-- marbles
-- measuring_spoons
+- mark_twine_book
 - mesh_cup
-- mouse_traps
+- oreos
+- outlet_plugs
+- paper_mates
 - pie_plates
-- plastic_wine_glass
-- poland_spring_water
-- reynolds_wrap
-- robots_dvd
-- robots_everywhere
-- scotch_sponges
+- plush_eggs
+- safety_glasses
 - speed_stick
-- table_cloth
+- stanley_66
+- stir_sticks
 - tennis_ball_container
-- ticonderoga_pencils
 - tissue_box
-- toilet_brush
-- white_facecloth
-- windex
-- __shelf__
