--- a/jsk_arc2017_common/config/object_weights.yaml
+++ b/jsk_arc2017_common/config/object_weights.yaml
@@ -39,3 +39,19 @@ tissue_box: 169
 toilet_brush: 128
 white_facecloth: 32
 windex: 745
+bath_duck: 73
+cheezits: 402
+crayons_big: 375
+dental_treats: 166
+duck_toy: 31
+highlighters: 115
+index_cards: 147
+# irish_spring_soap:
+mark_twine_book: 166
+oreos: 90
+outlet_plugs: 75
+paper_mates: 73
+plush_eggs: 97
+safety_glasses: 43
+stanley_66: 85
+stir_sticks: 286
