--- a/jsk_2015_05_baxter_apc/package.xml
+++ b/jsk_2015_05_baxter_apc/package.xml
@@ -27,7 +27,11 @@
   <build_depend>xacro</build_depend>
 
   <run_depend>baxter_gazebo</run_depend>
+  <!--
+  FIXME: Can't be installed on build.ros.org.
+  https://github.com/start-jsk/jsk_apc/issues/2069
   <run_depend>baxter_sim_hardware</run_depend>
+  -->
   <run_depend>baxtereus</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>geometry_msgs</run_depend>
