--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -28,6 +28,7 @@
   <build_depend>transmission_interface</build_depend>
 
   <run_depend>actionlib_msgs</run_depend>
+  <run_depend>and_scale_ros</run_depend>
   <run_depend>baxter_core_msgs</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>dynamixel_msgs</run_depend>
