--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,31 @@ dist: trusty
 
 language: c++ # to avoid using /opt/python from travis
 
-# cache:
-#   directories:
-#     - $HOME/.ccache
-#     - $HOME/.cache/pip
-#     - $HOME/.ros/data
+# for Travis {{{
+cache:
+  directories:
+    - $HOME/.ccache
+    - $HOME/.cache/pip
+    - $HOME/.ros/data
+# }}}
 
 env:
   global:
     - CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
     - NOT_TEST_INSTALL=true
-    - ROS_PARALLEL_JOBS="-j4"
     - ROSDEP_ADDITIONAL_OPTIONS="-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl"
     - USE_DEB=false
-    - NUMBER_OF_LOGS_TO_KEEP=10 # default is 3
-    # - USE_TRAVIS=true
-    - DOCKER_IMAGE_JENKINS="jsk-apc-indigo"  # built on Jenkins
+    # for Travis {{{
+    - USE_TRAVIS=true
+    - USE_DOCKER=true
+    - DOCKER_IMAGE="wkentaro/jsk_apc"
+    - ROS_PARALLEL_JOBS="-j2"
+    # }}}
+    # for Jenkins {{{
+    # - NUMBER_OF_LOGS_TO_KEEP=10 # default is 3
+    # - DOCKER_IMAGE_JENKINS="wkentaro/jsk_apc"
+    # - ROS_PARALLEL_JOBS="-j4"
+    # }}}
   matrix:
     - ROS_DISTRO=indigo
 
