Run push build only on the master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -45,3 +45,8 @@ notifications:
     on_success: always
     on_failure: always
   slack: jsk-robotics:Av7tc8wj3IWkLYvlTzHE7x2g
+
+# to weaken the load on the Jenkins server
+branches:
+  only:
+    - master
