--- a/.travis.yml
+++ b/.travis.yml
@@ -18,19 +18,11 @@ env:
     - NOT_TEST_INSTALL=true
     - ROSDEP_ADDITIONAL_OPTIONS="-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl"
     - USE_DEB=false
-    # for Travis {{{
-    - USE_TRAVIS=true
-    - USE_DOCKER=true
-    - DOCKER_IMAGE="wkentaro/jsk_apc"
-    - ROS_PARALLEL_JOBS="-j2"
-    # }}}
-    # for Jenkins {{{
-    # - NUMBER_OF_LOGS_TO_KEEP=10 # default is 3
-    # - DOCKER_IMAGE_JENKINS="wkentaro/jsk_apc"
-    # - ROS_PARALLEL_JOBS="-j4"
-    # }}}
   matrix:
-    - ROS_DISTRO=indigo
+    # # Travis
+    # - ROS_DISTRO=indigo USE_TRAVIS=true USE_DOCKER=true DOCKER_IMAGE="wkentaro/jsk_apc" ROS_PARALLEL_JOBS="-j2"
+    # Jenkins
+    - ROS_DISTRO=indigo DOCKER_IMAGE_JENKINS="wkentaro/jsk_apc" ROS_PARALLEL_JOBS="-j4"
 
 script:
   # build & test ROS packages
