--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -58,6 +58,8 @@
   <run_depend>xacro</run_depend>
 
   <test_depend>jsk_tools</test_depend>
+  <test_depend>roslint</test_depend>
+  <test_depend>rostest</test_depend>
 
   <export>
   </export>
