--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -36,6 +36,8 @@
   <run_depend>jsk_2015_05_baxter_apc</run_depend>
   <run_depend>jsk_2016_01_baxter_apc</run_depend>
   <run_depend>jsk_apc2015_common</run_depend>
+  <run_depend>jsk_apc2016_common</run_depend>
+  <run_depend>jsk_arc2017_common</run_depend>
   <run_depend>jsk_baxter_startup</run_depend>
   <run_depend>jsk_data</run_depend>
   <run_depend>jsk_interactive_marker</run_depend>
@@ -54,8 +56,6 @@
   <run_depend>transmission_interface</run_depend>
   <run_depend>xacro</run_depend>
 
-  <test_depend>jsk_apc2016_common</test_depend>
-  <test_depend>jsk_arc2017_common</test_depend>
   <test_depend>jsk_tools</test_depend>
   <test_depend>roslint</test_depend>
   <test_depend>rostest</test_depend>
