--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -63,5 +63,6 @@
   <test_depend>rostest</test_depend>
 
   <export>
+    <transmission_interface plugin="${prefix}/ros_control_plugins.xml" />
   </export>
 </package>
