--- a/jsk_arc2017_baxter/CMakeLists.txt
+++ b/jsk_arc2017_baxter/CMakeLists.txt
@@ -184,6 +184,8 @@ if(CATKIN_ENABLE_TESTING)
   roslint_python(node_scripts)
   roslint_add_test()
   find_package(rostest REQUIRED)
+  add_rostest(test/test_baxter_interface.test)
+  add_rostest(test/test_baxterlgv7_interface.test)
   add_rostest(test/test_pick_state_server.test)
   add_rostest(test/test_stow_state_server.test)
   add_rostest(test/test_pick_main.test)
