add robot-safe test for collision-avoid-ik

--- a/jsk_arc2017_baxter/CMakeLists.txt
+++ b/jsk_arc2017_baxter/CMakeLists.txt
@@ -184,6 +184,7 @@ if(CATKIN_ENABLE_TESTING)
   roslint_python(node_scripts)
   roslint_add_test()
   find_package(rostest REQUIRED)
+  add_rostest(test/test_baxter.test)
   add_rostest(test/test_baxterlgv7.test)
   add_rostest(test/test_baxter_interface.test)
   add_rostest(test/test_baxterlgv7_interface.test)
