--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,22 @@ env:
   global:
     - CATKIN_TOOLS_CONFIG_OPTIONS="--blacklist imagesift jsk_recognition_msgs jsk_perception jsk_pcl_ros_utils jsk_pcl_ros resized_image_transport checkerboard_detector fetcheus naoqieus jsk_fetch_startup jsk_nao_startup roseus_remote jsk_robot_startup jsk_robot_utils jsk_pr2_calibration pr2_base_trajectory_action jsk_baxter_web peppereus naoeus jsk_baxter_desktop jsk_pepper_startup jsk_pr2_startup jsk_pr2_desktop"
     - NOT_TEST_INSTALL=true
+    - ROS_PARALLEL_JOBS="-j2"
     - ROSDEP_ADDITIONAL_OPTIONS="-n -q --ignore-src --skip-keys=jsk_smart_gui --skip-keys=ros3djs --skip-keys=pr2_calibration_launch --skip-keys=jsk_android_gui_api9 --skip-keys=ros2djs --skip-keys=face_recognition --skip-keys=roslibjs --skip-keys=force_proximity_ros --skip-keys=safe_teleop_base --skip-keys=pcl"
     - USE_DEB=false
+    - USE_DOCKER=true
+    - USE_TRAVIS=true
   matrix:
-    # Travis
-    - ROS_DISTRO=indigo USE_TRAVIS=true USE_DOCKER=true DOCKER_IMAGE="wkentaro/jsk_apc:indigo" ROS_PARALLEL_JOBS="-j2"
-    - ROS_DISTRO=kinetic USE_TRAVIS=true USE_DOCKER=true DOCKER_IMAGE="wkentaro/jsk_apc:kinetic" ROS_PARALLEL_JOBS="-j2"
-    # # Jenkins
-    # - ROS_DISTRO=indigo DOCKER_IMAGE_JENKINS="wkentaro/jsk_apc" ROS_PARALLEL_JOBS="-j4"
+    - >|
+      ROS_DISTRO=indigo
+      DOCKER_IMAGE="wkentaro/jsk_apc:indigo"
+    - >|
+      ROS_DISTRO=kinetic
+      DOCKER_IMAGE="wkentaro/jsk_apc:kinetic"
+      ROSDEP_YET_ADDITIONAL_OPTIONS="--skip-keys=jsk_demo_common --skip-keys=roseus_mongo --skip-keys=jsk_baxter_startup --skip-keys=baxtereus"
 
 script:
+  - export ROSDEP_ADDITIONAL_OPTIONS="$ROSDEP_ADDITIONAL_OPTIONS $ROSDEP_YET_ADDITIONAL_OPTIONS"
   # build & test ROS packages
   - source .travis/travis.sh
   # build doc
