Use ROS_DISTRO env in Dockerfile

--- a/docker/kinetic/Dockerfile
+++ b/docker/kinetic/Dockerfile
@@ -1,6 +1,8 @@
 FROM osrf/ros:kinetic-desktop-xenial
 
-RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu xenial main" > /etc/apt/sources.list.d/ros-latest.list
+ENV ROS_DISTRO=kinetic
+
+RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
 
 RUN apt-get update && apt-get install -y \
     wget \
@@ -21,9 +23,9 @@ RUN cd ~ && \
     wstool set start-jsk/jsk_apc https://github.com/start-jsk/jsk_apc.git -v master --git -y && \
     wstool up -j 2 && \
     wstool merge start-jsk/jsk_apc/.travis.rosinstall && \
-    wstool merge start-jsk/jsk_apc/.travis.rosinstall.kinetic && \
+    wstool merge start-jsk/jsk_apc/.travis.rosinstall.$ROS_DISTRO && \
     wstool up -j 2
 RUN rosdep update
-# /opt/ros/indigo/share can be changed after rosdep install, so we run it 3 times.
-RUN for i in $(seq 3); do rosdep install --rosdistro indigo -r -y -i --from-paths /opt/ros/kinetic/share ~/src; done
+# /opt/ros/$ROS_DISTRO/share can be changed after rosdep install, so we run it 3 times.
+RUN for i in $(seq 3); do rosdep install --rosdistro $ROS_DISTRO -r -y -i --from-paths /opt/ros/$ROS_DISTRO/share ~/src; done
 RUN rm -rf ~/src
