--- a/docker/indigo/Dockerfile
+++ b/docker/indigo/Dockerfile
@@ -1,6 +1,8 @@
 FROM osrf/ros:indigo-desktop-trusty
 
-RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list
+ENV ROS_DISTRO=kinetic
+
+RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
 
 RUN apt-get update && apt-get install -y \
     wget \
@@ -23,6 +25,6 @@ RUN cd ~ && \
     wstool merge start-jsk/jsk_apc/.travis.rosinstall && \
     wstool up -j 2
 RUN rosdep update
-# /opt/ros/indigo/share can be changed after rosdep install, so we run it 3 times.
-RUN for i in $(seq 3); do rosdep install --rosdistro indigo -r -y -i --from-paths /opt/ros/indigo/share ~/src; done
+# /opt/ros/$ROS_DISTRO/share can be changed after rosdep install, so we run it 3 times.
+RUN for i in $(seq 3); do rosdep install --rosdistro $ROS_DISTRO -r -y -i --from-paths /opt/ros/$ROS_DISTRO/share ~/src; done
 RUN rm -rf ~/src
