--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ env:
     - ROS_DISTRO=kinetic
 
 script:
-  - export DOCKER_IMAGE="wkentaro/jsk_apc:$ROS_DISTRO"
+  - export DOCKER_IMAGE="jskrobotics/jsk_apc:$ROS_DISTRO"
   # build & test ROS packages
   - source .travis/travis.sh
   # build doc
@@ -41,7 +41,7 @@ after_script:
   # trigger the build of the docker image
   # If the test fails, new docker image can be helpful,
   # so it should be triggered at both after_success and failure.
-  - curl -X POST https://registry.hub.docker.com/u/wkentaro/jsk_apc/trigger/3ed08cc3-12bf-4a63-85a7-8082180f3639/
+  - curl -X POST https://registry.hub.docker.com/u/jskrobotics/jsk_apc/trigger/c4af5c9a-cf54-45b1-8beb-ccba5a102a1f/
 
 notifications:
   email:
