--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -30,6 +30,7 @@
 
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>baxter_core_msgs</run_depend>
+  <run_depend>baxter_moveit_config</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>dynamixel_msgs</run_depend>
   <run_depend>force_proximity_ros</run_depend>
