add dynamixel_controllers as build_depend

--- a/jsk_arc2017_baxter/package.xml
+++ b/jsk_arc2017_baxter/package.xml
@@ -17,6 +17,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>baxter_core_msgs</build_depend>
   <build_depend>controller_manager</build_depend>
+  <build_depend>dynamixel_controllers</build_depend>
   <build_depend>dynamixel_msgs</build_depend>
   <build_depend>force_proximity_ros</build_depend>
   <build_depend>hardware_interface</build_depend>
@@ -32,6 +33,7 @@
   <run_depend>baxter_core_msgs</run_depend>
   <run_depend>baxter_moveit_config</run_depend>
   <run_depend>controller_manager</run_depend>
+  <run_depend>dynamixel_controllers</run_depend>
   <run_depend>dynamixel_msgs</run_depend>
   <run_depend>force_proximity_ros</run_depend>
   <run_depend>hardware_interface</run_depend>
