--- a/demos/instance_occlsegm/ros/instance_occlsegm/package.xml
+++ b/demos/instance_occlsegm/ros/instance_occlsegm/package.xml
@@ -13,5 +13,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>catkin_virtualenv</build_depend>
+
   <run_depend>synthetic2d</run_depend>
+
+  <export>
+    <pip_requirements>requirements.txt</pip_requirements>
+  </export>
 </package>
