--- a/demos/grasp_fusion/ros/grasp_fusion/package.xml
+++ b/demos/grasp_fusion/ros/grasp_fusion/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>catkin_virtualenv</build_depend>
+  <build_depend>python-gdown-pip</build_depend>
 
   <run_depend>jsk_arc2017_baxter</run_depend>
   <run_depend>jsk_pcl_ros_utils</run_depend>
