--- a/demos/grasp_fusion/setup.cfg
+++ b/demos/grasp_fusion/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .anaconda*/, build/, grasp_fusion_lib/external/pycocotools/, src/, examples/basics/, examples/rbo_seg_apc2016/rbo_seg/, ros/image_proc_contrib/external/
+exclude = .anaconda*/, build/, src/, examples/basics/, examples/rbo_seg_apc2016/rbo_seg/, ros/image_proc_contrib/external/
 ignore = H304, E123, E731, W504
 
 [tool:pytest]
