--- a/docker/kinetic/Dockerfile
+++ b/docker/kinetic/Dockerfile
@@ -26,7 +26,7 @@ RUN cd ~ && \
     wstool merge start-jsk/jsk_apc/.travis.rosinstall && \
     wstool merge start-jsk/jsk_apc/.travis.rosinstall.$ROS_DISTRO && \
     wstool up -j 2
-RUN rosdep update
+RUN rosdep update --include-eol-distros
 # /opt/ros/$ROS_DISTRO/share can be changed after rosdep install, so we run it 3 times.
 RUN for i in $(seq 3); do rosdep install --rosdistro $ROS_DISTRO -r -y -i --from-paths /opt/ros/$ROS_DISTRO/share ~/src; done
 RUN rm -rf ~/src
