Use ros-testing in docker

--- a/docker/kinetic/Dockerfile
+++ b/docker/kinetic/Dockerfile
@@ -2,7 +2,7 @@ FROM osrf/ros:kinetic-desktop-xenial
 
 ENV ROS_DISTRO=kinetic
 
-RUN echo "deb http://packages.ros.org/ros-shadow-fixed/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
+RUN echo "deb http://packages.ros.org/ros-testing/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
 
 # FIXME: https://github.com/start-jsk/jsk_apc/pull/2664
 RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y \
