--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
     - ROS_DISTRO=kinetic
 
 script:
-  - export DOCKER_IMAGE="jskrobotics/jsk_apc:$ROS_DISTRO"
+  - export DOCKER_IMAGE="jskrobotics/jsk_apc:${ROS_DISTRO}-latest-testing"
   # build & test ROS packages
   - source .travis/travis.sh
   # build doc
