--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-ARG ROS_DISTRO="kinetic"
-ARG UBUNTU_VERSION="xenial"
-ARG TESTING="0"
+ARG ROS_DISTRO
+ARG UBUNTU_VERSION
+ARG TESTING
 FROM osrf/ros:${ROS_DISTRO}-desktop-${UBUNTU_VERSION}
 
 RUN echo "deb http://packages.ros.org/ros-testing/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
@@ -26,18 +26,18 @@ RUN cd ~ && \
     wstool set start-jsk/jsk_apc https://github.com/start-jsk/jsk_apc.git -v master --git -y && \
     wstool up -j 2 && \
     wstool merge start-jsk/jsk_apc/.travis.rosinstall && \
-    if [ -e "start-jsk/jsk_apc.travis.rosinstall.${ROS_DISTRO}" ]; then \
-      wstool merge start-jsk/jsk_apc/.travis.rosinstall.${ROS_DISTRO}; \
-    fi && \
+    wstool merge start-jsk/jsk_apc/.travis.rosinstall.${ROS_DISTRO} && \
     wstool up -j 2
 
 RUN rosdep update --include-eol-distros
+
 # /opt/ros/${ROS_DISTRO}/share can be changed after rosdep install, so we run it 3 times.
 RUN for i in $(seq 3); do rosdep install --rosdistro ${ROS_DISTRO} -r -y -i --from-paths /opt/ros/${ROS_DISTRO}/share ~/ros/${ROS_DISTRO}/src; done
 
-RUN if [ ${TESTING} ]; then \
-      rm -rf ~/ros/${ROS_DISTRO}/src; \
+RUN if [ ${TESTING} = "true" ] ; then \
+      rm -rf ~/ros; \
     else \
-      cd ~/ros/${ROS_DISTRO}; \
-      catkin build \
+      . /opt/ros/${ROS_DISTRO}/setup.sh && \
+      cd ~/ros/${ROS_DISTRO} && \
+      catkin build; \
     fi
