--- a/docker/hooks/build
+++ b/docker/hooks/build
@@ -6,10 +6,10 @@ set -eu
 if [[ ${BASH_REMATCH[2]} = "testing" ]]; then
   [[ ${DOCKER_TAG} =~ ([a-z]+)-([0-9a-z.]+)-([a-z]+)$ ]];
   ROS_DISTRO=${BASH_REMATCH[1]};
-  TESTING=1
+  TESTING="true"
 else
   ROS_DISTRO=${BASH_REMATCH[1]};
-  TESTING=0
+  TESTING="false"
 fi
 
 if [[ ${ROS_DISTRO} = "kinetic" ]]; then
