--- a/demos/instance_occlsegm/requirements.txt
+++ b/demos/instance_occlsegm/requirements.txt
@@ -1,6 +1,10 @@
 chainer>=4.0.0
 chainer-mask-rcnn>=0.5.13
 chainercv>=0.9.0
+# To install pycocotools (available version: 2.0.0), Cython should be installed in advance.
+# See https://github.com/cocodataset/cocoapi/issues/327.
+# '-e git+https://github.com/cocodataset/cocoapi.git#egg=pycocotools&subdirectory=PythonAPI' does not work due to https://github.com/locusrobotics/catkin_virtualenv/issues/48.
+Cython
 fcn>=6.1.8
 filelock
 gdown
