--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
  	branch = jsk_apc
 [submodule ".travis"]
 	path = .travis
-	url = https://github.com/jsk-ros-pkg/jsk_travis.git
+	url = https://github.com/k-okada/jsk_travis.git
