--- a/demos/instance_occlsegm/ros/synthetic2d/package.xml
+++ b/demos/instance_occlsegm/ros/synthetic2d/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>dynamic_reconfigure</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>image_view</run_depend>
