--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
   matrix:
     - ROS_DISTRO=indigo
     - ROS_DISTRO=kinetic
+    - ROS_DISTRO=melodic
 
 script:
   - export DOCKER_IMAGE="jskrobotics/jsk_apc:${ROS_DISTRO}-latest-testing"
