--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,6 +2,7 @@ ARG ROS_DISTRO
 ARG UBUNTU_VERSION
 FROM osrf/ros:${ROS_DISTRO}-desktop-${UBUNTU_VERSION}
 
+RUN apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654
 RUN echo "deb http://packages.ros.org/ros-testing/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list
 
 RUN apt-get update && apt-get install -y wget git
@@ -9,13 +10,14 @@ RUN wget http://packages.ros.org/ros.key -O - | apt-key add -
 
 # FIXME: https://github.com/start-jsk/jsk_apc/pull/2664
 RUN apt-get update && apt-get dist-upgrade -y && apt-get install -y \
+    apt-utils \
     python-catkin-tools \
     python-rosdep \
     python-setuptools \
-    python-wstool
+    python-wstool \
+    python-pip
 
-RUN easy_install -U pip && \
-    pip install 'pip<10' && \
+RUN pip install 'pip<10' && \
     pip install -U setuptools
 
 ARG ROS_DISTRO
