--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ env:
 matrix:
   allow_failures:
     - env: ROS_DISTRO=indigo
+    - env: ROS_DISTRO=melodic
 script:
   - export DOCKER_IMAGE="jskrobotics/jsk_apc:${ROS_DISTRO}-latest-testing"
   # build & test ROS packages
