--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ env:
     - USE_DOCKER=true
     - USE_TRAVIS=true
     # XXX: hotfix for chainer problem (https://github.com/chainer/chainer/issues/8545)
-    - BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0'
+    - BEFORE_SCRIPT='sudo -H pip install chainer==6.7.0 gdown==3.10.1'
   matrix:
     - ROS_DISTRO=indigo
     - ROS_DISTRO=indigo BUILD_PKGS="jsk_apc2015_common jsk_apc2016_common jsk_arc2017_common jsk_2015_05_baxter_apc jsk_2016_01_baxter_apc jsk_arc2017_baxter selective_dualarm_stowing"
