[grasp_prediction_arc2017] Don't install data on build time to prevent build failure on travis due to googledrive access limit

--- a/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/CMakeLists.txt
+++ b/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/CMakeLists.txt
@@ -5,7 +5,8 @@ find_package(catkin REQUIRED catkin_virtualenv)
 
 catkin_python_setup()
 
-add_custom_target(${PROJECT_NAME}_install_data ALL COMMAND ${PROJECT_SOURCE_DIR}/scripts/install_data.py)
+# add_custom_target(${PROJECT_NAME}_install_data ALL COMMAND ${PROJECT_SOURCE_DIR}/scripts/install_data.py)
+# Don't install data on build time to prevent build failure on travis due to googledrive access limit
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -89,5 +90,6 @@ if(CATKIN_ENABLE_TESTING)
   find_package(roslaunch REQUIRED)
   roslaunch_add_file_check(launch/play_rosbag.launch)
   roslaunch_add_file_check(samples/sample_fcn_object_segmentation.launch)
-  add_rostest(samples/sample_fcn_object_segmentation.launch ARGS gui:=false GPU:=-1)
+  # add_rostest(samples/sample_fcn_object_segmentation.launch ARGS gui:=false GPU:=-1)
+  # Don't install data on build time to prevent build failure on travis due to googledrive access limit
 endif()
