--- a/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/package.xml
+++ b/demos/grasp_prediction_arc2017/ros/grasp_prediction_arc2017/package.xml
@@ -14,6 +14,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>catkin_virtualenv</build_depend>
+  <build_depend>grasp_fusion</build_depend>
   <build_depend>python-gdown-pip</build_depend>
 
   <run_depend>grasp_fusion</run_depend>
@@ -37,6 +38,5 @@
   <test_depend>rostest</test_depend>
 
   <export>
-    <pip_requirements>requirements.txt</pip_requirements>
   </export>
 </package>
